Solve the problem with align header with content Modify other details regarding to the design

--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@
     color:#F9FAF8;
     display: flex;
     flex-direction: column;
+    padding:0 180px;
   }
   /*------HEADER---------*/
   .header{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 15px 0;
   }
   
   a:link{
@@ -37,21 +38,28 @@
   /*-------START CONTENT---------*/
   .start-cont{
     display:flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding:60px 0;
+    height:100%;
   } 
   img{
-    max-width: 350px;
-    height: auto;
+    width: 350px;
+    height: 100%;
   }
  /* .start-cont, .left-cont{
     flex:1;
     display: flex;
     padding: 10px;
   }
+  */
   .left-cont{
+    display:flex;
     flex-direction: column;
   }
-  */
+  p {
+    margin: 0;
+    padding: 0;
+    }
   .awesome{
     font-size: 48px;
     font-weight:bolder;
@@ -61,11 +69,12 @@
   .secondary{
     color:#E5E7EB;  
     font-size: 18px;
+    margin-bottom: 10px;
   }
   button{
     border-radius:5px;
     background-color:#3882F6;
     color:#E5E7EB;
-    width: 80px;
-    height: auto;
+    width: 100px;
+    height: 30px;
   }
